[package]
name = "dicom-pixeldata"
version = "0.1.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Peter Evers <pevers90@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A high-level API for decoding DICOM objects into images and ndarrays"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["multimedia::images"]
keywords = ["dicom"]
readme = "README.md"

[dependencies]
dicom-object = { path = "../object", version = "0.5.0" }
dicom-core = { path = "../core", version = "0.5.0" }
dicom-encoding = { path = "../encoding", version = "0.5.0" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.5.0" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.5.0" }
snafu = "0.7.0"
byteorder = "1.4.3"
gdcm-rs = { version = "0.3.0", optional = true }
rayon = { version = "1.5.0", optional = true }
ndarray = { version = "0.15.1", optional = true }
ndarray-stats = { version = "0.5", optional = true }
num-traits = "0.2.12"
tracing = "0.1.34"

[dependencies.image]
version = "0.24.1"
optional = true
default-features = false
features = ["jpeg", "png", "pnm", "tiff", "webp", "bmp"]

[dev-dependencies]
rstest = "0.12.0"

# Patch version fixes shakyness in tests which use DICOM test files,
# can be updated once https://github.com/robyoung/dicom-test-files/pull/2 is merged
[dev-dependencies.dicom-test-files]
git = "https://github.com/Enet4/dicom-test-files"
branch = "patch-1"

[features]
default = ["rayon"]
gdcm = ["gdcm-rs"]
ndarray = ["dep:ndarray", "dep:ndarray-stats"]
rayon = ["dep:rayon", "image?/jpeg_rayon", "dicom-encoding/rayon"]

[package.metadata.docs.rs]
features = ["image", "ndarray"]
